project PT. Mandiri Technology Sejahtera

--- a/brand.html
+++ b/brand.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./assets/styles/navbar.css" />
         <link rel="stylesheet" href="./assets/styles/style.css" />
+        <link rel="stylesheet" href="./assets/styles/brand.css" />
         <link rel="stylesheet" href="./assets/styles/footer.css" />
         <script src="./assets/js/navbar.js"></script>
         <title>Detail product</title>
@@ -208,12 +209,6 @@
             </div>
 
             <div class="footer-hdm" id="footer">
-                <img
-                    loading="lazy"
-                    src="https://images-builder.vercel.app/img/ornamen_hdm.svg"
-                    alt="img"
-                    class="ornamen-hdm"
-                />
                 <div class="footer-right-hdm">
                     <div class="group-list-hdm">
                         <ul>
