--- a/index.html
+++ b/index.html
@@ -85,13 +85,12 @@
                 <p class="p-section5-body-mz1">Assets</p>
                 <h1 class="title-section5-mz1">OUR PORTOFOLIO</h1>
                 <p class="p-section5-body-mz1">
-                    Lörem ipsum astrobel sar direlig. Kronde est konfoni med
-                    kelig. Terabel pov<br />astrobel sar direlig.Lörem ipsum
-                    astrobel sar direlig. Kronde est
+                    Some of the best portfolios of our companies available today
                 </p>
                 <div class="container-card-mz1">
                     <div class="card-section5-left-mz1">
-                        <img src="./assets/images/mockup1.jpg" alt="portofolio">
+                        <img loading="lazy" src="./assets/images/mockup1.jpg" alt="portofolio">
+                        <div class="skeleton-image">Loading...</div>
                         <div class="card-body-mz1">
                             <div>
                                 <h1>Title Porto</h1>
@@ -105,36 +104,38 @@
                                 <h1>Title Porto</h1>
                             </div>
                         </div>
-                        <img src="./assets/images/mockup2.jpg" alt="portofolio">
-                        </div>
+                        <img loading="lazy" src="./assets/images/mockup2.jpg" alt="portofolio">
+                        <div class="skeleton-image">Loading...</div>    
+                    </div>
                         <div class="card-sections3-mz1">
                             <div class="card-body3-mz1">
                                 <div>
                                     <h1>Title Porto</h1>
                                 </div>
                             </div>
-                            <img src="./assets/images/mockup3.jpg" alt="portofolio">
+                            <img loading="lazy" src="./assets/images/mockup3.jpg" alt="portofolio">
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                     </div>
                 </div>
                 <div class="wrapper-percentation">
                     <div>
-                        <img src="./assets/icons/projects.svg" alt="" />
+                        <img loading="lazy" src="./assets/icons/projects.svg" alt="" />
                         <h3 id="completed-projects">0</h3>
                         <p>PROJECTS COMPLETED</p>
                     </div>
                     <div>
-                        <img src="./assets/icons/customers.svg" alt="" />
+                        <img loading="lazy" src="./assets/icons/customers.svg" alt="" />
                         <h3 id="total-customers">0</h3>
                         <p>CUSTOMERS</p>
                     </div>
                     <div>
-                        <img src="./assets/icons/products.svg" alt="" />
+                        <img loading="lazy" src="./assets/icons/products.svg" alt="" />
                         <h3 id="total-products">0</h3>
                         <p>PRODUCTS ME</p>
                     </div>
                     <div>
-                        <img src="./assets/icons/portofolio.svg" alt="" />
+                        <img loading="lazy" src="./assets/icons/portofolio.svg" alt="" />
                         <h3 id="portfolio-count">0</h3>
                         <p>PORTFOLIO</p>
                     </div>
@@ -145,13 +146,12 @@
             <div class="container-mou" id="PRODUCTS">
                 <h1 class="title-mou">OUR PRODUCTS</h1>
                 <p class="teks-mou">
-                    The Nature is Beautifulfind your favorite picture around the
-                    world.
+                    We have built and developed many products professionally
                 </p>
                 <div class="wrap-foto-mou">
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -161,7 +161,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -171,7 +171,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -181,7 +181,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -191,7 +191,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -201,7 +201,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -211,7 +211,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -221,7 +221,7 @@
                     </div>
                     <div class="foto-mou">
                         <div class="skeleton-card">
-                            <div class="skeleton-image">Memuat...</div>
+                            <div class="skeleton-image">Loading...</div>
                         </div>
                         <img
                             loading="lazy"
@@ -243,10 +243,10 @@
                     </div>
                     <div class="top-right-exp">
                         <div class="arrow-exp left-exp">
-                            <img src="https://images-builder.vercel.app/img/leftexplore.svg" alt="icon-arrow">
+                            <img loading="lazy" src="https://images-builder.vercel.app/img/leftexplore.svg" alt="icon-arrow">
                         </div>
                         <div class="arrow-exp right-exp">
-                            <img src="https://images-builder.vercel.app/img/rightexplore.svg" alt="icon-arrow">
+                            <img loading="lazy" src="https://images-builder.vercel.app/img/rightexplore.svg" alt="icon-arrow">
                         </div>
                     </div>
                 </div>
@@ -254,65 +254,64 @@
                     <div class="wrap-bottom-exp">
                         <div class="card-exp">
                             <div class="card-top-exp">
-                                <img src="./assets/images/cpu.jpeg" alt="card-image">
+                                <img loading="lazy" src="./assets/images/cpu.jpeg" alt="card-image">
                             </div>
                             <div class="card-bottom-exp">
                                 <div class="title-bottom-exp">
-                                    <h4>Paradise Beach, Bantayan Island</h4>
+                                    <h4>APPLE MACKBOOK PRO</h4>
                                     <p>$150.00</p>
                                 </div>
-                                <small>Rome, Italy</small>
-                                <p class="rating-exp">4.8 <img src="./assets/images/starexplore.svg" alt="icon-star">
+                                <small>APPLE</small>
                                 </p>
                             </div>
                         </div>
                         <div class="card-exp">
                             <div class="card-top-exp">
-                                <img src="./assets/images/laptop.jpeg" alt="card-image">
+                                <img loading="lazy" src="./assets/images/laptop.jpeg" alt="card-image">
                             </div>
                             <div class="card-bottom-exp">
                                 <div class="title-bottom-exp">
-                                    <h4>Paradise Beach, Bantayan Island</h4>
+                                    <h4>APPLE MACKBOOK PRO</h4>
                                     <p>$150.00</p>
                                 </div>
-                                <small>Rome, Italy</small>
+                                <small>APPLE</small>
                             </div>
                         </div>
                         <div class="card-exp">
                             <div class="card-top-exp">
-                                <img src="./assets/images/kamera.jpeg" alt="card-image">
+                                <img loading="lazy" src="./assets/images/kamera.jpeg" alt="card-image">
                             </div>
                             <div class="card-bottom-exp">
                                 <div class="title-bottom-exp">
-                                    <h4>Paradise Beach, Bantayan Island</h4>
+                                    <h4>APPLE MACKBOOK PRO</h4>
                                     <p>$150.00</p>
                                 </div>
-                                <small>Rome, Italy</small>
+                                <small>APPLE</small>
                                 </p>
                             </div>
                         </div>
                         <div class="card-exp">
                             <div class="card-top-exp">
-                                <img src="./assets/images/keyboard.jpeg" alt="card-image">
+                                <img loading="lazy" src="./assets/images/keyboard.jpeg" alt="card-image">
                             </div>
                             <div class="card-bottom-exp">
                                 <div class="title-bottom-exp">
-                                    <h4>Paradise Beach, Bantayan Island</h4>
+                                    <h4>APPLE MACKBOOK PRO</h4>
                                     <p>$150.00</p>
                                 </div>
-                                <small>Rome, Italy</small>
+                                <small>APPLE</small>
                             </div>
                         </div>
                         <div class="card-exp">
                             <div class="card-top-exp">
-                                <img src="./assets/images/shoes.jpeg" alt="card-image">
+                                <img loading="lazy" src="./assets/images/shoes.jpeg" alt="card-image">
                             </div>
                             <div class="card-bottom-exp">
                                 <div class="title-bottom-exp">
-                                    <h4>Paradise Beach, Bantayan Island</h4>
+                                    <h4>APPLE MACKBOOK PRO</h4>
                                     <p>$150.00</p>
                                 </div>
-                                <small>Rome, Italy</small>
+                                <small>APPLE</small>
                                 </p>
                             </div>
                         </div>
@@ -527,20 +526,63 @@
                 </div>
             </section>
 
+            <section class="section4-mz2">
+                <h1 class="section4-mz2-title">Frequently Asked Questions</h1>
+                <p class="section4-mz2-paragh">We tried to answer most common questions, if you have any additional, please get in touch with our friendly team</p>
+                <div>
+                    <button class="accordion-mz2">
+                        <span>01. What are properties in Figma?</span>
+                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
+                    </button>
+                    <div class="panel-mz2">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <button class="accordion-mz2">
+                        <span>02. How Whitespace UI&nbsp;kit and Design&nbsp;System can help me?</span>
+                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
+                    </button>
+                    <div class="panel-mz2">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <button class="accordion-mz2">
+                        <span>03. What is your return policy?</span>
+                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
+                    </button>
+                    <div class="panel-mz2">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <button class="accordion-mz2">
+                        <span>04. How can I contact customer support?</span>
+                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
+                    </button>
+                    <div class="panel-mz2">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <button class="accordion-mz2">
+                        <span>05. What payment methods do you accept?</span>
+                        <img src="https://images-builder.vercel.app/img/add_section4mz2.svg" alt="icon">
+                    </button>
+                    <div class="panel-mz2">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+                <div class="section4-bottom">
+                    <h1>Still have a questions?</h1>
+                    <p>We're sorry we couldn't provide you with the information you were looking for. Please contact us and we'll be happy to help.</p>
+                    <button><img src="https://images-builder.vercel.app/img/vector_section4mz2.svg" alt="icon">
+                        <span>Contact us</span>
+                    </button>
+                </div>
+            </section>
+
             <div class="footer-hdm">
-                <img
-                    loading="lazy"
-                    src="https://images-builder.vercel.app/img/ornamen_hdm.svg"
-                    alt="img"
-                    class="ornamen-hdm"
-                />
                 <div class="footer-right-hdm">
                     <div class="group-list-hdm">
                         <ul>
                             <h3>PHONE</h3>
                             <a href="">
-                                <li><img src="./assets/icons/mobile.svg" alt="icon" /> 08158971348</li>
-                                <li><img src="./assets/icons/phone.svg" alt="icon" /> PHONE: 021-566 8707</li>
+                                <li><img loading="lazy" src="./assets/icons/mobile.svg" alt="icon" /> 08158971348</li>
+                                <li><img loading="lazy" src="./assets/icons/phone.svg" alt="icon" /> PHONE: 021-566 8707</li>
                             </a>
                         </ul>
                     </div>
@@ -548,10 +590,10 @@
                         <ul>
                             <h3>EMAIL</h3>
                             <a href="">
-                                <li><img src="./assets/icons/email.svg" alt="icon" /> thomas@berkat-anugrah.net</li>
+                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> thomas@berkat-anugrah.net</li>
                             </a>
                             <a href="">
-                                <li><img src="./assets/icons/email.svg" alt="icon" /> sales@berkat-anugrah.net</li>
+                                <li><img loading="lazy" src="./assets/icons/email.svg" alt="icon" /> sales@berkat-anugrah.net</li>
                             </a>
                         </ul>
                     </div>
@@ -560,7 +602,7 @@
                             <h3>ADDRESS</h3>
                             <a href="">
                                 <li>
-                                    <img src="./assets/icons/location.svg" alt="icon" />
+                                    <img loading="lazy" src="./assets/icons/location.svg" alt="icon" />
                                     JL Tanjung Duren Raya No.4 Kav 373
                                     Jakarta – Barat 11470
                                 </li>
@@ -570,8 +612,21 @@
                 </div>
             </div>
 
-        <script src="./assets/js/navbar.js"></script>
+            <a href="https://wa.me/0129188218271" target="_blank">
+                    <div class="wa-feature">
+                    <img src="./assets/images/wa.png" alt="wa">
+                </div>
+            </a>
 
+        <script src="./assets/js/navbar.js"></script>
+        <script>
+            var i, acc = document.getElementsByClassName("accordion-mz2");
+            for (i = 0; i < acc.length; i++) acc[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var e = this.nextElementSibling;
+                "block" === e.style.display ? e.style.display = "none" : e.style.display = "block";
+            })
+        </script>
         <script>
             const titleElement = document.querySelector(".title-hero-bmw");
             const textElement = document.getElementById("text-animation");
